feat: Add favicon and remove old projects
Adds a custom SVG favicon to the portfolio for branding.
Removes the "B2B Wealth Platforms" and "Home Services Platforms" projects from the `constants.tsx` file as they are no longer relevant to showcase the developer's current focus.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rohan Patel | SDE-2 & Frontend Architect</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2225%22 fill=%22%23030712%22/><path d=%22M30 30L50 50L30 70M60 70H80%22 stroke=%22%233b82f6%22 stroke-width=%2212%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22 fill=%22none%22/></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
