--- a/index.html
+++ b/index.html
@@ -7,28 +7,60 @@
     <title>Rohan Patel | SDE-2 & Frontend Architect</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2225%22 fill=%22%23030712%22/><path d=%22M30 30L50 50L30 70M60 70H80%22 stroke=%22%233b82f6%22 stroke-width=%2212%22 stroke-linecap=%22round%22 stroke-linejoin=%22round%22 fill=%22none%22/></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class',
+        theme: {
+          extend: {
+            colors: {
+              brand: {
+                dark: '#030712',
+                light: '#f8fafc'
+              }
+            }
+          }
+        }
+      }
+    </script>
+    <script>
+      // Initialize theme based on local storage or system preference
+      (function() {
+        const theme = localStorage.getItem('theme') || 
+                     (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+        if (theme === 'dark') {
+          document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.remove('dark');
+        }
+      })();
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #030712;
-            color: #f9fafb;
         }
         .font-mono {
             font-family: 'JetBrains Mono', monospace;
         }
         .glass-card {
-            background: rgba(17, 24, 39, 0.7);
+            background: rgba(255, 255, 255, 0.03);
             backdrop-filter: blur(12px);
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
+        .dark .glass-card {
+            background: rgba(17, 24, 39, 0.7);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        /* Light mode card adjustments */
+        html:not(.dark) .glass-card {
+            background: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(0, 0, 0, 0.05);
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+        }
         .gradient-text {
-            background: linear-gradient(135deg, #60a5fa 0%, #a855f7 50%, #ec4899 100%);
+            background: linear-gradient(135deg, #3b82f6 0%, #a855f7 50%, #ec4899 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-        }
-        .glow {
-            box-shadow: 0 0 20px rgba(96, 165, 250, 0.2);
         }
         @keyframes slide-up-fade {
             0% { opacity: 0; transform: translateY(20px); filter: blur(10px); }
@@ -39,6 +71,9 @@
         .animate-word {
             display: inline-block;
             animation: slide-up-fade 3s infinite;
+        }
+        .transition-theme {
+            transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
         }
     </style>
 <script type="importmap">
@@ -53,7 +88,7 @@
 }
 </script>
 </head>
-<body>
+<body class="bg-brand-light dark:bg-brand-dark text-slate-900 dark:text-gray-100 transition-theme">
     <div id="root"></div>
 </body>
 </html>
